--- a/src/views/form.twig.html
+++ b/src/views/form.twig.html
@@ -7,7 +7,7 @@
 <h1>Login</h1>
 
 <form method="post" action="/login" id="login-form">
-    <input type="email" name="email" placeholder="Your email" value="">
+    <input type="email" name="email" placeholder="Your email" value="" pattern="^([a-zA-Z0-9_.+-])+@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$">
     <input type="password" name="password" value="">
     <button value="login" id="login-button">Login</button>
 </form>
@@ -130,7 +130,6 @@
             el.addEventListener('click', function (event) {
                 console.log('click');
                 event.preventDefault();
-
                 var data = form.serialize();
                 data += '&serform='+getFormMarkup();
                 console.log(data);
