--- a/src/views/form.twig.html
+++ b/src/views/form.twig.html
@@ -6,7 +6,139 @@
 <body>
 <h1>Login</h1>
 
-<form method="post" action="/login" id="login-form">
+
+<script>
+var AJAXSubmit = (function () {
+
+function ajaxSuccess () {
+  /* console.log("AJAXSubmit - Success!"); */
+  console.log(this.response);
+  /* you can get the serialized data through the "submittedData" custom property: */
+  /* alert(JSON.stringify(this.submittedData)); */
+  var dumper = document.getElementById('dumper');
+  dumper.innerHTML = this.response.dump;
+}
+
+function submitData (oData) {
+  /* the AJAX request... */
+  var oAjaxReq = new XMLHttpRequest();
+  oAjaxReq.responseType = "json";
+  oAjaxReq.submittedData = oData;
+  oAjaxReq.onload = ajaxSuccess;
+  oAjaxReq.onerror = function(error) {
+    console.log('error', error);
+  }
+  console.log('sending');
+
+  if (oData.technique === 0) {
+    /* method is GET */
+    oAjaxReq.open("get", oData.receiver.replace(/(?:\?.*)?$/, oData.segments.length > 0 ? "?" + oData.segments.join("&") : ""), true);
+    oAjaxReq.send(null);
+  } else {
+    /* method is POST */
+    oAjaxReq.open("post", oData.receiver, true);
+    console.log(oData.segments);
+    //return false;
+    if (oData.technique === 3) {
+      /* enctype is multipart/form-data */
+      var sBoundary = "---------------------------" + Date.now().toString(16);
+      oAjaxReq.setRequestHeader("Content-Type", "multipart\/form-data; boundary=" + sBoundary);
+      console.log('sendAsBinary');
+      oAjaxReq.send("--" + sBoundary + "\r\n" + oData.segments.join("--" + sBoundary + "\r\n") + "--" + sBoundary + "--\r\n");
+    } else {
+      /* enctype is application/x-www-form-urlencoded or text/plain */
+      oAjaxReq.setRequestHeader("Content-Type", oData.contentType);
+      oAjaxReq.send(oData.segments.join(oData.technique === 2 ? "\r\n" : "&"));
+    }
+  }
+}
+
+function processStatus (oData) {
+  if (oData.status > 0) { return; }
+  /* the form is now totally serialized! do something before sending it to the server... */
+  /* doSomething(oData); */
+  console.log("AJAXSubmit - The form is now serialized. Submitting...");
+  submitData (oData);
+}
+
+function pushSegment (oFREvt) {
+  this.owner.segments[this.segmentIdx] += oFREvt.target.result + "\r\n";
+  this.owner.status--;
+  processStatus(this.owner);
+}
+
+function plainEscape (sText) {
+  /* how should I treat a text/plain form encoding? what characters are not allowed? this is what I suppose...: */
+  /* "4\3\7 - Einstein said E=mc2" ----> "4\\3\\7\ -\ Einstein\ said\ E\=mc2" */
+  return sText.replace(/[\s\=\\]/g, "\\$&");
+}
+
+function SubmitRequest (oTarget) {
+  var nFile, sFieldType, oField, oSegmReq, oFile, bIsPost = oTarget.method.toLowerCase() === "post";
+  /* console.log("AJAXSubmit - Serializing form..."); */
+  this.contentType = bIsPost && oTarget.enctype ? oTarget.enctype : "application\/x-www-form-urlencoded";
+  this.technique = bIsPost ? this.contentType === "multipart\/form-data" ? 3 : this.contentType === "text\/plain" ? 2 : 1 : 0;
+  console.log(this.technique);
+  this.receiver = oTarget.action;
+  this.status = 0;
+  this.segments = [];
+  var fFilter = this.technique === 2 ? plainEscape : escape;
+  for (var nItem = 0; nItem < oTarget.elements.length; nItem++) {
+    oField = oTarget.elements[nItem];
+    if (!oField.hasAttribute("name")) { continue; }
+    sFieldType = oField.nodeName.toUpperCase() === "INPUT" ? oField.getAttribute("type").toUpperCase() : "TEXT";
+    if (sFieldType === "FILE" && oField.files.length > 0) {
+      if (this.technique === 3) {
+        /* enctype is multipart/form-data */
+        for (nFile = 0; nFile < oField.files.length; nFile++) {
+          oFile = oField.files[nFile];
+          oSegmReq = new FileReader();
+          /* (custom properties:) */
+          oSegmReq.segmentIdx = this.segments.length;
+          oSegmReq.owner = this;
+          /* (end of custom properties) */
+          oSegmReq.onload = pushSegment;
+          this.segments.push("Content-Disposition: form-data; name=\"" + oField.name + "\"; filename=\""+ oFile.name + "\"\r\nContent-Type: " + oFile.type + "\r\n\r\n");
+          this.status++;
+          oSegmReq.readAsBinaryString(oFile);
+        }
+      } else {
+        /* enctype is application/x-www-form-urlencoded or text/plain or method is GET: files will not be sent! */
+        for (nFile = 0; nFile < oField.files.length; this.segments.push(fFilter(oField.name) + "=" + fFilter(oField.files[nFile++].name)));
+      }
+    } else if ((sFieldType !== "RADIO" && sFieldType !== "CHECKBOX") || oField.checked) {
+      /* field type is not FILE or is FILE but is empty */
+      this.segments.push(
+        this.technique === 3 ? /* enctype is multipart/form-data */
+          "Content-Disposition: form-data; name=\"" + oField.name + "\"\r\n\r\n" + oField.value + "\r\n"
+        : /* enctype is application/x-www-form-urlencoded or text/plain or method is GET */
+          fFilter(oField.name) + "=" + fFilter(oField.value)
+      );
+    }
+
+
+  }
+
+  // add form markup to perform parameter
+  if (this.technique === 3) {
+    this.segments.push("Content-Disposition: form-data; name=\"" + 'serform' + "\"\r\n\r\n" + oTarget.outerHTML + "\r\n");
+  } else {
+    this.segments.push('serform' + "=" + encodeURIComponent(oTarget.outerHTML));
+  }
+  processStatus(this);
+}
+
+return function (oFormElement) {
+  if (!oFormElement.action) { return; }
+  new SubmitRequest(oFormElement);
+};
+
+})();
+
+
+</script>
+
+<form method="post" action="/displayform" id="login-form" enctype="multipart/form-data" onsubmit="console.log('aha'); AJAXSubmit(this); return false;">
     <input type="email" name="email" placeholder="Your email" value="" pattern="^([a-zA-Z0-9_.+-])+@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$">
     <input type="password" name="password" value="">
     <textarea name="test_textarea"></textarea>
@@ -16,153 +148,9 @@
         <option value="mercedes">Mercedes</option>
         <option value="audi">Audi</option>
     </select>
-    <button value="login" id="login-button">Login</button>
+    <input type="file" multiple name="photos[]">
+    <input type="submit" value="Submit" />
 </form>
-<script>
-    var sumbitter = (function () {
-        var form = document.getElementById('login-form');
-
-        function init(){
-            bindSubmit();
-            /* Add the forEach method to Array elements if absent */
-            if (!Array.prototype.forEach) {
-                Array.prototype.forEach = function(fn, scope) {
-                    'use strict';
-
-                    var i, len;
-
-                    for (i = 0, len = this.length; i < len; ++i) {
-                        if (i in this) {
-                            fn.call(scope, this[i], i, this);
-                        }
-                    }
-                };
-            }
-
-            /* Extrapolate the Array forEach method to NodeList elements if absent */
-            if (!NodeList.prototype.forEach) {
-                NodeList.prototype.forEach = Array.prototype.forEach;
-            }
-
-            /*
-             * Extrapolate the Array forEach method to
-             * HTMLFormControlsCollection elements if absent
-             */
-            if (!HTMLFormControlsCollection.prototype.forEach) {
-                HTMLFormControlsCollection.prototype.forEach = Array.prototype.forEach;
-            }
-
-            /**
-             * Convert form elements to query string or JavaScript object.
-             *
-             * @param asObject
-             *            If the serialization should be returned as an object.
-             */
-            HTMLFormElement.prototype.serialize = function(asObject) {
-                'use strict';
-
-                var form = this;
-                var elements;
-                var add = function(name, value) {
-                    value = encodeURIComponent(value);
-
-                    if (asObject) {
-                        elements[name] = value;
-                    } else {
-                        elements.push(name + '=' + value);
-                    }
-                };
-
-                if (asObject) {
-                    elements = {};
-                } else {
-                    elements = [];
-                }
-
-                form.elements.forEach(function(element) {
-                    switch (element.nodeName) {
-                        case 'BUTTON':
-                            /* Omit this elements */
-                            break;
-
-                        default:
-                            switch (element.type) {
-                                case 'submit':
-                                case 'button':
-                                    /* Omit this types */
-                                    break;
-
-                                default:
-                                    add(element.name, element.value);
-                                    break;
-                            }
-                            break;
-                    }
-                });
-
-                if (asObject) {
-                    return elements;
-                }
-
-                return elements.join('&');
-            };
-        }
-
-        function post(url, data, success, error) {
-            var request = new XMLHttpRequest();
-            request.open('POST', url, true);
-            request.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded; charset=UTF-8');
-            request.send(data);
-
-            request.onload = function () {
-                if (request.status >= 200 && request.status < 400) {
-                    // Success!
-                    var resp = request.responseText;
-                    success(resp);
-                } else {
-                    // We reached our target server, but it returned an error
-                    error();
-                }
-            };
-
-            request.onerror = function () {
-                // There was a connection error of some sort
-                error();
-            };
-
-        }
-
-        function bindSubmit() {
-            var el = document.getElementById('login-button');
-            el.addEventListener('click', function (event) {
-                console.log('click');
-                event.preventDefault();
-                var data = form.serialize();
-                data += '&serform='+getFormMarkup();
-                console.log(data);
-                post('/loginform', data, function(response){
-                    console.log('success');
-                    console.log(response);
-                    response = JSON.parse(response);
-                    console.log(response);
-                    var dumper = document.getElementById('dumper');
-                    dumper.innerHTML = response.dump;
-
-                }, console.log);
-            });
-        }
-
-
-        function getFormMarkup(){
-            return encodeURIComponent(form.outerHTML);
-        }
-
-
-        // run init
-        init();
-    })();
-
-</script>
 
 <pre id="dumper">
 
