fixed file upload

--- a/src/views/form.twig.html
+++ b/src/views/form.twig.html
@@ -7,138 +7,9 @@
 <h1>Login</h1>
 
 
-<script>
-var AJAXSubmit = (function () {
+<script src="/assets/bundle.js"></script>
 
-function ajaxSuccess () {
-  /* console.log("AJAXSubmit - Success!"); */
-  console.log(this.response);
-  /* you can get the serialized data through the "submittedData" custom property: */
-  /* alert(JSON.stringify(this.submittedData)); */
-  var dumper = document.getElementById('dumper');
-  dumper.innerHTML = this.response.dump;
-}
-
-function submitData (oData) {
-  /* the AJAX request... */
-  var oAjaxReq = new XMLHttpRequest();
-  oAjaxReq.responseType = "json";
-  oAjaxReq.submittedData = oData;
-  oAjaxReq.onload = ajaxSuccess;
-  oAjaxReq.onerror = function(error) {
-    console.log('error', error);
-  }
-  console.log('sending');
-
-  if (oData.technique === 0) {
-    /* method is GET */
-    oAjaxReq.open("get", oData.receiver.replace(/(?:\?.*)?$/, oData.segments.length > 0 ? "?" + oData.segments.join("&") : ""), true);
-    oAjaxReq.send(null);
-  } else {
-    /* method is POST */
-    oAjaxReq.open("post", oData.receiver, true);
-    console.log(oData.segments);
-    //return false;
-    if (oData.technique === 3) {
-      /* enctype is multipart/form-data */
-      var sBoundary = "---------------------------" + Date.now().toString(16);
-      oAjaxReq.setRequestHeader("Content-Type", "multipart\/form-data; boundary=" + sBoundary);
-      console.log('sendAsBinary');
-      oAjaxReq.send("--" + sBoundary + "\r\n" + oData.segments.join("--" + sBoundary + "\r\n") + "--" + sBoundary + "--\r\n");
-    } else {
-      /* enctype is application/x-www-form-urlencoded or text/plain */
-      oAjaxReq.setRequestHeader("Content-Type", oData.contentType);
-      oAjaxReq.send(oData.segments.join(oData.technique === 2 ? "\r\n" : "&"));
-    }
-  }
-}
-
-function processStatus (oData) {
-  if (oData.status > 0) { return; }
-  /* the form is now totally serialized! do something before sending it to the server... */
-  /* doSomething(oData); */
-  console.log("AJAXSubmit - The form is now serialized. Submitting...");
-  submitData (oData);
-}
-
-function pushSegment (oFREvt) {
-  this.owner.segments[this.segmentIdx] += oFREvt.target.result + "\r\n";
-  this.owner.status--;
-  processStatus(this.owner);
-}
-
-function plainEscape (sText) {
-  /* how should I treat a text/plain form encoding? what characters are not allowed? this is what I suppose...: */
-  /* "4\3\7 - Einstein said E=mc2" ----> "4\\3\\7\ -\ Einstein\ said\ E\=mc2" */
-  return sText.replace(/[\s\=\\]/g, "\\$&");
-}
-
-function SubmitRequest (oTarget) {
-  var nFile, sFieldType, oField, oSegmReq, oFile, bIsPost = oTarget.method.toLowerCase() === "post";
-  /* console.log("AJAXSubmit - Serializing form..."); */
-  this.contentType = bIsPost && oTarget.enctype ? oTarget.enctype : "application\/x-www-form-urlencoded";
-  this.technique = bIsPost ? this.contentType === "multipart\/form-data" ? 3 : this.contentType === "text\/plain" ? 2 : 1 : 0;
-  console.log(this.technique);
-  this.receiver = oTarget.action;
-  this.status = 0;
-  this.segments = [];
-  var fFilter = this.technique === 2 ? plainEscape : escape;
-  for (var nItem = 0; nItem < oTarget.elements.length; nItem++) {
-    oField = oTarget.elements[nItem];
-    if (!oField.hasAttribute("name")) { continue; }
-    sFieldType = oField.nodeName.toUpperCase() === "INPUT" ? oField.getAttribute("type").toUpperCase() : "TEXT";
-    if (sFieldType === "FILE" && oField.files.length > 0) {
-      if (this.technique === 3) {
-        /* enctype is multipart/form-data */
-        for (nFile = 0; nFile < oField.files.length; nFile++) {
-          oFile = oField.files[nFile];
-          oSegmReq = new FileReader();
-          /* (custom properties:) */
-          oSegmReq.segmentIdx = this.segments.length;
-          oSegmReq.owner = this;
-          /* (end of custom properties) */
-          oSegmReq.onload = pushSegment;
-          this.segments.push("Content-Disposition: form-data; name=\"" + oField.name + "\"; filename=\""+ oFile.name + "\"\r\nContent-Type: " + oFile.type + "\r\n\r\n");
-          this.status++;
-          oSegmReq.readAsBinaryString(oFile);
-        }
-      } else {
-        /* enctype is application/x-www-form-urlencoded or text/plain or method is GET: files will not be sent! */
-        for (nFile = 0; nFile < oField.files.length; this.segments.push(fFilter(oField.name) + "=" + fFilter(oField.files[nFile++].name)));
-      }
-    } else if ((sFieldType !== "RADIO" && sFieldType !== "CHECKBOX") || oField.checked) {
-      /* field type is not FILE or is FILE but is empty */
-      this.segments.push(
-        this.technique === 3 ? /* enctype is multipart/form-data */
-          "Content-Disposition: form-data; name=\"" + oField.name + "\"\r\n\r\n" + oField.value + "\r\n"
-        : /* enctype is application/x-www-form-urlencoded or text/plain or method is GET */
-          fFilter(oField.name) + "=" + fFilter(oField.value)
-      );
-    }
-
-
-  }
-
-  // add form markup to perform parameter
-  if (this.technique === 3) {
-    this.segments.push("Content-Disposition: form-data; name=\"" + 'serform' + "\"\r\n\r\n" + oTarget.outerHTML + "\r\n");
-  } else {
-    this.segments.push('serform' + "=" + encodeURIComponent(oTarget.outerHTML));
-  }
-  processStatus(this);
-}
-
-return function (oFormElement) {
-  if (!oFormElement.action) { return; }
-  new SubmitRequest(oFormElement);
-};
-
-})();
-
-
-</script>
-
-<form method="post" action="/displayform" id="login-form" enctype="multipart/form-data" onsubmit="console.log('aha'); AJAXSubmit(this); return false;">
+<form method="post" action="/example_submit" id="login-form" enctype="multipart/form-data" onsubmit="Perform.submit(this); return false;">
     <input type="email" name="email" placeholder="Your email" value="" pattern="^([a-zA-Z0-9_.+-])+@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$">
     <input type="password" name="password" value="">
     <textarea name="test_textarea"></textarea>
@@ -148,12 +19,13 @@ return function (oFormElement) {
         <option value="mercedes">Mercedes</option>
         <option value="audi">Audi</option>
     </select>
-    <input type="file" multiple name="photos[]">
+    <input type="file" multiple name="files[]">
     <input type="submit" value="Submit" />
 </form>
 
 <pre id="dumper">
-
+    result dump goes here...
 </pre>
+
 </body>
 </html>
