--- a/src/views/form.twig.html
+++ b/src/views/form.twig.html
@@ -1,26 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap-theme.min.css">
 </head>
-<body>
-<h1>Login</h1>
+<body class="container">
+<h1>Two post form example (with / without file uploads)</h1>
 
 
 <script src="/assets/bundle.js"></script>
 
-<form method="post" action="/example_submit" id="login-form" enctype="multipart/form-data" onsubmit="Perform.submit(this); return false;">
-    <input type="email" name="email" placeholder="Your email" value="" pattern="^([a-zA-Z0-9_.+-])+@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$">
-    <input type="password" name="password" value="">
-    <textarea name="test_textarea"></textarea>
-    <select name="test-select">
-        <option value="volvo">Volvo</option>
-        <option value="saab" selected>Saab</option>
-        <option value="mercedes">Mercedes</option>
-        <option value="audi">Audi</option>
-    </select>
-    <input type="file" multiple name="files[]">
-    <input type="submit" value="Submit" />
+
+<h2>enctype="multipart/form-data" - file upload (even multiple)</h2>
+<form method="post" action="/multiple-file-uploads" id="login-form" enctype="multipart/form-data" onsubmit="Perform.submit(this); return false;">
+    <p>
+        <label for="email-1">Email: </label>
+        <input type="email" name="email" placeholder="Your email" value="" pattern="^([a-zA-Z0-9_.+-])+@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$" id="email-1">
+    </p>
+        <label for="passwd-1">Pass: </label>
+        <input type="password" name="password" value="" id="passwd-1">
+    </p>
+    <p>
+        <label for="desc-1">Longer description: </label>
+    </p>
+    <p>
+        <textarea name="test_textarea" id="desc-1"></textarea>
+    </p>
+    <p>
+        <select name="test-select">
+            <option value="volvo">Volvo</option>
+            <option value="saab" selected>Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
+        </select>
+    </p>
+    <p>
+        <input type="file" multiple name="files[]">
+    </p>
+    <p>
+        <input type="submit" value="Submit" class="btn btn-primary">
+    </p>
+</form>
+
+<h2>Enctype=application/x-ww-form-urlencoded</h2>
+<form method="post" action="/simple-post" id="login-form-2" onsubmit="Perform.submit(this); return false;">
+    <p>
+        <input type="email" name="email" placeholder="Your email" value="" pattern="^([a-zA-Z0-9_.+-])+@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$">
+    </p>
+    <p>
+        <textarea name="test_textarea"></textarea>
+    </p>
+    <p>
+        <label><input type="checkbox" id="cbox1" value="first_checkbox"> This is the first checkbox</label><br>
+    </p>
+    <p>
+        <input type="checkbox" id="cbox2" value="second_checkbox"> <label for="cbox2">This is the second checkbox</label>
+    </p>
+    <p>
+        <input type="submit" value="Submit" class="btn btn-primary" />
+    </p>
 </form>
 
 <pre id="dumper">
