--- a/src/views/form.twig.html
+++ b/src/views/form.twig.html
@@ -10,8 +10,8 @@
 <script src="/assets/bundle.js"></script>
 
 
-<h2>enctype="multipart/form-data" - file upload (even multiple)</h2>
-<form method="post" action="/multiple-file-uploads" id="login-form" enctype="multipart/form-data" onsubmit="Perform.submit(this); return false;">
+<h2>file upload (multiple)</h2>
+<form method="post" action="/multiple-file-uploads" id="login-form">
     <p>
         <label for="email-1">Email: </label>
         <input type="email" name="email" placeholder="Your email" value="" pattern="^([a-zA-Z0-9_.+-])+@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$" id="email-1">
@@ -40,6 +40,27 @@
         <input type="submit" value="Submit" class="btn btn-primary">
     </p>
 </form>
+
+<script>
+  (function() {
+    var form = document.getElementById('login-form');
+    console.log(form);
+    form.onsubmit = function() {
+      console.log('click');
+      Perform.submit(
+        form,
+        function success(response) {
+          console.log('mysuccess', response);
+        },
+        function error(error) {
+          console.log('myError', error);
+        }
+      );
+
+      return false;
+    };
+  })();
+</script>
 
 <script type="working-prototype">
 //https://www.new-bamboo.co.uk/blog/2012/01/10/ridiculously-simple-ajax-uploads-with-formdata/
